tests/compile/userdata_meta_owned_self.stderr
error: meta methods cannot take `self`, use `&[mut] self` instead
 --> tests/compile/userdata_meta_owned_self.rs:8:5
  |
8 |     fn __gc(self) -> mlua::Result<()> {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
